# pywal-themer

./: Cargo.toml  README.md  SPEC.md  pywal-themer.user.js
src/: main.rs
