[package]
name = "pywal-cache-server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"

[[bin]]
name = "pywal-cache-server"
path = "src/main.rs"